# xilang

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  README.md  README_troubleshooting.md  build.sh  conanfile.txt  demo.ps1  demo.sh  example.sh
Examples/: Main0.xi
Examples/Demo/: Mod.xi
Examples/Unit/: Mod.xi
TestSrc/: Main0.xi
examples/: IOHelper.xi  arr.xi  global.xi  hello.xi  main.xi  math.xi  template.xi
examples/demo/: algo.xi  hello_world.xi  mod.xi
include/core/: common.hpp  path.hpp
include/lang/: ast.hpp  cfg.hpp  grammar.hpp  parser.hpp  selector.hpp
native/: CMakeLists.txt  lib.c
src/: CMakeLists.txt  lang.cpp  lib.rs  xi.rs  xic.rs  xilang.rs  xivm.rs  xix.rs
src/core/: flags.rs  inst.rs  mod.rs  path.cpp  serde.rs
src/core/util/: path.rs
src/ir/: bc_serde.rs  blob.rs  class_file.rs  code.rs  constant.rs  file.rs  flag.rs  flags.rs  generic.rs  inst.rs  ir_file.rs  member.rs  mod.rs  module.rs  param.rs  path.rs  stand_alone_sig.rs  text_serde.rs  tok.rs  ty.rs  var.rs
src/ir/attrib/: field.rs  generic.rs  local.rs  method.rs  mod.rs  param.rs  pinvoke.rs  ty.rs
src/ir/class/: bc_serde.rs  class_file.rs  mod.rs  ser.rs  text_serde.rs
src/ir/file/: bc_serde.rs  code.rs  member.rs  mod.rs  text_serde.rs  ty.rs
src/ir/inst/: fmt.rs  mod.rs  serde.rs
src/ir/parser/: ir_parser.rs
src/ir/sig/: method.rs  mod.rs
src/ir/text_serde/: ir.pest  mod.rs
src/ir/util/: linkedlist.rs  path.rs
src/lang/: ast.cpp  class.rs  class_builder.rs  crate_mgr.rs  err.rs  mod.rs  module.rs  module_mgr.rs  parser.cpp
src/lang/ast/: ast.rs  class.rs  disp.rs  expr.rs  field.rs  func.rs  gen.rs  generic.rs  interpreter.rs  member.rs  method.rs  mod.rs  op.rs  strukt.rs  ty.rs
src/lang/mod_mgr/: class.rs  external.rs  field.rs  member.rs  method.rs  mod.rs  module.rs  ty.rs  var.rs
src/lang/mod_mgr/module/: class_pass.rs  code_gen_pass.rs  member_pass.rs  mod.rs
src/lang/parser/: grammar.lalrpop  grammar.pest  lalr_parser.rs  lexer.rs  ll_parser.rs  mod.rs  peg_parser.rs  token.rs  token_mgr.rs
src/lang/sym/: class.rs  field.rs  func.rs  krate.rs  method.rs  mod.rs  module.rs  strukt.rs  ty.rs  var.rs
src/lang/util/: mod.rs  path.rs
src/lang/xi_crate/: class.rs  mod.rs  module.rs  var.rs
src/runtime/: mod.rs
src/runtime/interp/: mod.rs
src/runtime/mem/: mod.rs
src/runtime/mem/heap/: mod.rs  obj_entry.rs
src/runtime/mem/stack/: mod.rs
src/vm/: executor.rs  heap.rs  loader.rs  mod.rs  shared_mem.rs
src/vm/data/: class.rs  field.rs  method.rs  mod.rs  module.rs  ty.rs
src/vm/data/ty/: mod.rs
src/vm/exec/: arr.rs  fld.rs  mod.rs  op.rs
src/vm/exec/internal_calls/: mod.rs
src/vm/heap/: mod.rs  obj.rs
src/vm/loader/: bc_deser.rs  linker.rs  mod.rs
src/vm/mem/: heap.rs  mod.rs  slot.rs  stack.rs  static_area.rs
src/vm/native/: linux.rs  mod.rs  win.rs
src/vm/stack/: ar.rs  eval_stack.rs  locals.rs  mod.rs
src/vm/util/: ptr.rs
std/: lib.xi
std-dll/: .clang-format  CMakeLists.txt  CMakeSettings.json  lib.c
sys/: collections.xi  mod.xi
test/: CMakeLists.txt  grammar_tests.cpp  tests.cpp
