[package]
name = "xilang"
version = "0.1.0"
authors = ["shwu <xipotatonium@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "3.0.10"
pest = "2.0"
pest_derive = "2.0"
regex = "1"
lazy_static = "1.4.0"

[lib]
name = "core"
path = "src/lib.rs"

[[bin]]
name = "xi"
path = "src/xi.rs"
